@@ -1,3 +1,9 @@
+(copyfiles (fonts) (source "_cfs_/1") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_ && mkdir _cfs_ && touch _cfs_/1 _cfs_/1.font","1","test -f _cfd_/1 && test -f _cfd_/1.font && rm -Rf _cfs_ _cfd_"
+(copyfiles (fonts) (all) (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_  && mkdir _cfs_ && touch _cfs_/1 _cfs_/1.font","1","test -f _cfd_/1 && test -f _cfd_/1.font && rm -Rf _cfs_ _cfd_"
+(copyfiles (fonts) (choices "1") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_ && mkdir _cfs_ && touch _cfs_/1 _cfs_/1.font","1","test -f _cfd_/1 && test -f _cfd_/1.font && rm -Rf _cfs_ _cfd_"
+(copyfiles (fonts) (choices "1" "2") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_ && mkdir _cfs_ && touch _cfs_/1 _cfs_/2 _cfs_/1.font","1","test -f _cfd_/1 && test -f _cfd_/1.font && test -f _cfd_/2 && test ! -f _cfd_/2.font && rm -Rf _cfs_ _cfd_"
+(copyfiles (fonts) (pattern "1") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_  && mkdir _cfs_ && touch _cfs_/1 _cfs_/1.font","1","test -f _cfd_/1 && test -f _cfd_/1.font && rm -Rf _cfs_ _cfd_"
+(copyfiles (fonts) (choices "1" "1.font") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_  && mkdir _cfs_ && touch _cfs_/1 _cfs_/1.font","1","test -f _cfd_/1 && test -f _cfd_/1.font && rm -Rf _cfs_ _cfd_"
 (copyfiles (choices "_cf1_" "_cf2_") (source "") (dest "_cfd_")) ; "rm -Rf _cf1_ _cf2_ _cfd_ && mkdir _cfd_ && touch _cf1_ _cf2_","1","test -f _cfd_/_cf1_ && test -f _cfd_/_cf2_ && rm -Rf _cf1_ _cf2_ _cfd_"
 (copyfiles (choices "_cf1_" "_cf2_") (source "") (dest "_cfd_")) ; "rm -Rf _cf1_ _cf2_ _cfd_ && touch _cf1_ _cf2_","1","test -f _cfd_/_cf1_ && test -f _cfd_/_cf2_ && rm -Rf _cf1_ _cf2_ _cfd_"
 (copyfiles (choices "_cf1_" "_cf2_") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cf1_ _cf2_ _cfd_ && touch _cf1_ _cf2_","Line 1: No such file or directory '_cfs_/_cf1_' 0","rm -Rf _cf1_ _cf2_ _cfd_"
@@ -26,9 +32,6 @@
 (copyfiles (all) (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_  && mkdir _cfs_ && touch _cfs_/1 _cfs_/1.font","1","test -f _cfd_/1 && test -f _cfd_/1.font && rm -Rf _cfs_ _cfd_"
 (copyfiles (pattern "1.#?") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_  && mkdir _cfs_ && touch _cfs_/1 _cfs_/1.font","1","test -f _cfd_/1 && test -f _cfd_/1.font && rm -Rf _cfs_ _cfd_"
 (copyfiles (choices "1" "1.font") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_  && mkdir _cfs_ && touch _cfs_/1 _cfs_/1.font","1","test -f _cfd_/1 && test -f _cfd_/1.font && rm -Rf _cfs_ _cfd_"
-(copyfiles (fonts) (all) (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_  && mkdir _cfs_ && touch _cfs_/1 _cfs_/1.font","1","test -f _cfd_/1 && test ! -f _cfd_/1.font && rm -Rf _cfs_ _cfd_"
-(copyfiles (fonts) (pattern "1.#?") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_  && mkdir _cfs_ && touch _cfs_/1 _cfs_/1.font","1","test -f _cfd_/1 && test ! -f _cfd_/1.font && rm -Rf _cfs_ _cfd_"
-(copyfiles (fonts) (choices "1" "1.font") (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_  && mkdir _cfs_ && touch _cfs_/1 _cfs_/1.font","1","test -f _cfd_/1 && test ! -f _cfd_/1.font && rm -Rf _cfs_ _cfd_"
 (copyfiles (source "_cfs_") (dest "_cfd_")) ; "rm -Rf _cfd_ _cfs_ && mkdir _cfs_ && touch _cfs_/1 _cfs_/1.font","Line 1: Missing option 'all/choices/pattern' 0","rm -Rf _cfs_ _cfd_"
 (set @yes 1) (copyfiles (source "_cfs_") (dest "_cfd_") (all) (optional "fail" "force")) (+ 2) ; "rm -Rf _cfs_ _cfd_ && mkdir _cfs_ _cfd_ && echo 1 > _cfs_/1 && echo 2 > _cfs_/2 && echo 2 > _cfd_/1 && chmod a-w _cfd_/1","2","cmp _cfs_/1 _cfd_/1 && chmod a+w _cfd_/1 && rm -Rf _cfs_ _cfd_"
 (set @yes 1) (copyfiles (source "_cfs_") (dest "_cfd_") (all) (optional "nofail" "force")) (+ 2) ; "rm -Rf _cfs_ _cfd_ && mkdir _cfs_ _cfd_ && echo 1 > _cfs_/1 && echo 2 > _cfs_/2 && echo 2 > _cfd_/1 && chmod a-w _cfd_/1","2","cmp _cfs_/1 _cfd_/1 && chmod a+w _cfd_/1 && rm -Rf _cfs_ _cfd_"
